--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
 body {
-    background-image: url("back";
+    background: url('../images/background_resize0.gif') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.logo img{
+    width: 70%;
+    height: 5%;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+.start img{
+    display: block;
+    margin: 0 auto;
+    margin-top: 30%;
+    width: 30%;
+    height: 20%;
+}
+
+.info img{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 4%;
+    height: 8%;
+
 }
