--- a/css/style.css
+++ b/css/style.css
@@ -11,20 +11,20 @@ body {
     height: 5%;
     display: block;
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 3%;
 }
 
 .start img{
     display: block;
     margin: 0 auto;
-    margin-top: 30%;
+    margin-top: 25%;
     width: 30%;
     height: 20%;
 }
 
 .info img{
     position: fixed;
-    top: 10px;
+    bottom: 10px;
     right: 10px;
     width: 4%;
     height: 8%;
