--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,8 @@ body {
 
 .info img{
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 1%;
+    right: 1%;
     width: 4%;
     height: 8%;
-
 }
