--- a/css/styleLeaderboard.css
+++ b/css/styleLeaderboard.css
@@ -8,6 +8,7 @@ body {
 
 #board {
     margin-top: 20%;
+    margin-left: 4%;
 }
 
 #board p{
@@ -59,3 +60,52 @@ body {
     width: 4%;
     height: 8%;
 }
+
+.score h1{
+    font-family: 'Bangers', cursive;
+    text-shadow:
+        4px 4px 0 black,
+        1px 1px 0 black,
+        4px 4px 0 black,
+        1px 1px 0 black;
+    color: orange;
+    font-size: 500%;
+    text-align: center;
+    margin-top: 10%;
+}
+
+.score img{
+    position: fixed;
+    top: 30%;
+    right: 48%;
+    width: 6%;
+    height: 11%;
+}
+
+#board2 {
+    margin-top: 10%;
+    margin-left: 4%;
+}
+
+#board2 p{
+    font-family: 'Bangers', cursive;
+    color: orange;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+    font-size: 140%;
+}
+
+#board2 h1{
+    font-family: 'Bangers', cursive;
+    text-shadow:
+        -1px -1px 0 orange,
+        1px -1px 0 orange,
+        -1px 1px 0 orange,
+        1px 1px 0 orange;
+    color: black;
+    font-size: 200%;
+}
+
